--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Home page of the Nantes NLP group
-
 theme: jekyll-theme-cayman
+title: Nantes NLP group
+description: Home page of the Nantes Natural Language Processing group
